# swc-plugin-react-native-esbuild-module

./: .gitignore  Cargo.toml  README.md  demo.ts  package.json  tsconfig.json
src/: lib.rs  module_collector.rs  utils.rs
src/tests/: bundle_time_module.rs  defaults.rs  esm_export.rs  esm_import.rs
