[package]
name = "swc-plugin-react-native-esbuild-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1"
serde_json = "1.0.108"
swc_core = { version = "0.85.*", features = ["ecma_plugin_transform", "ecma_utils"] }
tracing = { version = "0.1.40", features = ["release_max_level_off"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
